<resources>
    <string name="app_name">Meeting Planner</string>
    <string name="settings">Settings</string>
    <string name="dateText">Choose Date</string>
    <string name="enterDetails">Enter Meeting Details</string>
    <string name="meetingDetails">Edit Meeting Details</string>
    <string name="timeText">Choose Time</string>
    <string name="timeFormatted">%1$d : %2$d</string>
    <string name="dateFormatted">%1$d / %2$d / %3$d</string>
    <string name="meetingName">Meeting Name</string>
    <string name="meetingDesc">Meeting Description</string>
    <string name="descTxt">Description: </string>
    <string name="nameTxt">Name: </string>
    <string name="submitMeeting">Submit</string>
    <string name="createMeeting">Create Meeting</string>
    <string name="pastMeetings">Past Meetings</string>
    <string name="futureMeetings">Upcoming Meetings </string>
    <string name="formFilled">Please fill in all sections of the form</string>
    <string name="meetingCreated">Meeting Created</string>
    <string name="attendeesHint">Enter Attendees</string>
    <string name="locationText">Choose Location</string>
    <string name="locationSet">Location Set</string>
    <string name="title_activity_maps">Map</string>
    <string name="saveChanges">Save Changes</string>
    <string name="changesSaved">Changes Saved</string>
    <string name="cancelMeeting">Cancel Meeting</string>
    <string name="meetingCancelled">Meeting Cancelled</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="noMeetingsText">No Past Meetings</string>
    <string name="noUpcomingMeetingsTxt">No Upcoming Meetings</string>
    <string name="details">Meeting Details</string>
    <string name="addLocation">Please Add a Location</string>
    <string name="timezoneGMT">GMT</string>
    <string name="invalidDate">Invalid date, please choose a future date</string>
    <string name="weatherError">Unable to fetch weather data</string>
    <string name="share">Share</string>
    <string name="shareName">Name: </string>
    <string name="shareDesc">Description: </string>
    <string name="shareDate">Date: </string>
    <string name="shareTime">Time: </string>
    <string name="shareLocation">Location: </string>
    <string name="newMeetingLocation">New Meeting Location</string>
    <string name="curMeetingLoc">Current Meeting Location</string>
    <string name="locationAdded">Location Added</string>
    <string name="forecastAPIKEY">d1c3303bb45cb861acddfa658b0ad6f1</string>
</resources>
