<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_meeting_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme"
    tools:context="matt.meetingplanner.CreateMeetingFragment"
   >

    <TextView
        android:id="@+id/enterDetailsTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/defaultTextSize"
        android:textColor="@color/colorPrimary"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:text="@string/enterDetails"
    />

    <EditText
        android:id="@+id/meetingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:layout_below="@+id/enterDetailsTxt"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:inputType="textAutoComplete"
        android:hint="@string/meetingName"
        android:theme="@style/nameTheme"
    />

    <EditText
        android:id="@+id/meetingDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:singleLine="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:layout_below="@+id/meetingName"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:inputType="textMultiLine"
        android:hint="@string/meetingDesc"
        android:theme="@style/DescTheme"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/meetingDesc"
    android:id="@+id/dateTimeLinear"
    android:layout_centerHorizontal="true"
    android:gravity="center">

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dateText"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:textAlignment="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
    />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/timeText"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:textAlignment="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
    />
</LinearLayout>
    <EditText
        android:id="@+id/meetingAttendees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:singleLine="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:layout_below="@+id/dateTimeLinear"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:inputType="textMultiLine"
        android:hint="@string/attendeesHint"
        android:theme="@style/attendeeTheme"
    />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/locationText"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:textAlignment="center"
        android:layout_below="@+id/meetingAttendees"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
    />
    <!-- TODO add location field-->
    <!-- TODO make button subtly change when pressed   -->
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/submitMeeting"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:background="@drawable/roundedcornersbtn"
    />


</RelativeLayout>
