<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/meeting_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme"
    tools:context="matt.meetingplanner.MeetingDetails"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        />


    <EditText
        android:id="@+id/meeting_details_meetingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:layout_below="@+id/my_toolbar"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:inputType="textAutoComplete"
        android:hint="@string/meetingName"
        android:theme="@style/nameTheme"
        />

    <EditText
        android:id="@+id/meeting_details_meetingDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:singleLine="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:layout_below="@+id/meeting_details_meetingName"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:inputType="textMultiLine"
        android:hint="@string/meetingDesc"
        android:theme="@style/DescTheme"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/meeting_details_meetingDesc"
        android:id="@+id/meeting_details_dateTimeLinear"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <TextView
            android:id="@+id/meeting_details_textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dateText"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/defaultTextSize"
            android:textAlignment="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:id="@+id/meeting_details_textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/timeText"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/defaultTextSize"
            android:textAlignment="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/meeting_details_meetingAttendees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:singleLine="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:layout_below="@+id/meeting_details_dateTimeLinear"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:inputType="textMultiLine"
        android:hint="@string/attendeesHint"
        android:theme="@style/attendeeTheme"
        />

    <TextView
        android:id="@+id/meeting_details_locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/locationText"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:textAlignment="center"
        android:layout_below="@+id/meeting_details_meetingAttendees"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />

    <TextView
        android:id="@+id/meeting_details_weatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/weatherError"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/defaultTextSize"
        android:textAlignment="center"
        android:layout_below="@+id/meeting_details_locationText"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/meeting_details_weatherText"
        android:id="@+id/meeting_details_btnLinear"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center">
    <!-- TODO make button subtly change when pressed   -->
        <Button
            android:id="@+id/meeting_details_cancelMeetingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelMeeting"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:background="@drawable/roundedcornersbtn"
            />
        <Button
            android:id="@+id/meeting_details_editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/saveChanges"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:background="@drawable/roundedcornersbtn"
            />

    </LinearLayout>
</RelativeLayout>